--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "linux-perf",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "linux-perf.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap test/*.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,12 @@
   "dependencies": {
     "nan": "^2.10.0",
     "node-gyp": "^3.6.2"
+  },
+  "devDependencies": {
+    "clang-format": "^1.2.3",
+    "tap": "^12.0.1"
+  },
+  "engines": {
+    "node": ">=10.4.0"
   }
 }
