build, test: increase coverage and update supported versions
  - Drop Node.js v6, v8 and v9, since we don't have the V8 API for those
  - Don't allow master and canary tests to fail
  - Fix bindings to work with Node.js v12

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "linux-perf.js",
   "scripts": {
-    "test": "tap test/*.js"
+    "test": "./test.sh"
   },
   "repository": {
     "type": "git",
