--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ matrix:
     # Test on Ubuntu Xenial
     - dist: xenial
       node_js: "10"
+    # Test on Ubuntu Xenial
+    - dist: xenial
+      node_js: "12"
     # Test Node.js master nightly build
     - node_js: "node"
       sudo: required
@@ -22,20 +25,6 @@ matrix:
         - sudo apt-get install lldb-3.9 liblldb-3.9-dev -y
       install:
         - npm install --nodedir=$(dirname $(dirname $(which node)))/
-      env:
-        - NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/v8-canary
-        - NODEJS_ORG_MIRROR=https://nodejs.org/download/v8-canary
-  allow_failures:
-    # Allow the nightly installs to fail
-    - node_js: "node"
-      sudo: required
-      dist: xenial
-      env:
-        - NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly
-        - NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly
-    - node_js: "node"
-      sudo: required
-      dist: xenial
       env:
         - NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/v8-canary
         - NODEJS_ORG_MIRROR=https://nodejs.org/download/v8-canary
