--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/mmarchini/node-linux-perf#readme",
   "dependencies": {
-    "nan": "^2.10.0",
+    "node-addon-api": "^1.7.1",
     "node-gyp": "^4.0.0"
   },
   "devDependencies": {
